2002-01-04  Philippe Elie  <ph_e@club-internet.fr>

	* dae/Makefile.in: fix opd_kernel.c dependancy

2002-01-04  John Levon  <moz@compsoc.man.ac.uk>

	* dae/Makefile.in:
	* dae/opd_proc.c:
	* dae/opd_kernel.c: move kernel/module stuff into
	  new file. Some minor changes.
 
2002-01-04  John Levon  <moz@compsoc.man.ac.uk>

	* dae/oprofiled.c: remove extra dump
 
2002-01-04  John Levon  <moz@compsoc.man.ac.uk>

	* dae/opd_proc.c: minor crap
 
2002-01-04  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update

	* dae/oprofiled.c:
	* dae/oprofiled.h:
	* dae/opd_proc.c: print stats on shutdown too

	* module/oprofile.c: additional check against daemon hanging on shutdown :(
 
2002-01-04  John Levon  <moz@compsoc.man.ac.uk>

	* dae/op_stop:
	* dae/oprofiled.c:
	* doc/oprofile.sgml:
	* module/oprofile.h:
	* module/oprofile.c: implement new clean shutdown via
	  sysctl dump_stop
 
2002-01-04  Philippe Elie  <ph_e@club-internet.fr>

	* module/oprofile.c: add a warning when note buff overflow.

2002-01-04  John Levon  <moz@compsoc.man.ac.uk>

	* module/oprofile.c: pin note at the end on overflow
 
2002-01-03  Philippe Elie  <ph_e@club-internet.fr>

	* dae/opd_proc.c: Apologies: stupid bug. Never forget
	  than LRU list of samples files must not contain already
  	  unmaped files

	* module/oprofile.c: another silly bug, detected cpu was
	  overwritten...

2002-01-03  John Levon  <moz@compsoc.man.ac.uk>

	* doc/oprofile.sgml: some fixes, comments

2002-01-03  Philippe Elie  <ph_e@club-internet.fr>

	* doc/oprofile.sgml: improve documentation, corrected
	  by John Levon

2002-01-03  John Levon  <moz@compsoc.man.ac.uk>

	* gui/oprof_start.h:
	* gui/oprof_start.cpp:
	* gui/ui/oprof_start.base.ui: remove the config buttons
	  and save on a hide from the WM
 
2002-01-03  John Levon  <moz@compsoc.man.ac.uk>

	* module/oprofile.c: make sure note_pos never goes
	  past the buffer :P
 
2002-01-03  John Levon  <moz@compsoc.man.ac.uk>

	* dae/opd_util.c: allow EAGAINs through as well
 