@@ -1,5 +1,8 @@
 2002-01-04  Philippe Elie  <ph_e@club-internet.fr>
 
+	* module/oprofile.c: do not re-enable counter during
+	  shutdown
+
 	* dae/Makefile.in: fix opd_kernel.c dependancy
 
 2002-01-04  John Levon  <moz@compsoc.man.ac.uk>
